@@ -65,7 +65,7 @@ if (!$ENV{CREATE_ONLY}) {
     $ok &&= CheckModule("Data::Dumper");
     $ok &&= CheckModule("Storable");
     $ok &&= CheckModule("LWP", undef, "libwww");
-    $ok &&= CheckModule("Mail::Internet", undef, "MailTools");
+    $ok &&= CheckModule("Mail::Internet", 1.12, "MailTools");
 
     if (!$ok) {
 	print <<"MESSAGE";
